<resources>
    <string name="app_name">English Mastery</string>
    <string name="author">Powered by BMT team</string>
    <string name="title">Learn together</string>
    <string name="win">win</string>
    <string name="win_count">1</string>
    <string name="buy_coin">Buy now</string>
    <string name="learning">Learning</string>
    <string name="vocabulary">Vocabulary</string>
    <string name="play_now">Play Now</string>
    <string name="playing_game">Playing Game</string>
    <string name="learning_now">Learning Now</string>
    <string name="story"><![CDATA[Stories]]></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="accounted">You had an account?</string>
    <string name="log_in_now">Log in now!</string>
    <string name="not_accounted">You don\'t have account?</string>
    <string name="sign_up_now">Sign up now!</string>
    <string name="empty_email">Empty Email!</string>
    <string name="empty_password">Empty Password!</string>
    <string name="empty_cpassword">Empty Password!</string>
    <string name="same_password">Password and confirm password must be same!</string>

    <string name="counter_length">Your password lenght is shoter than 6</string>
    <string name="empty_name">Empty Name!</string>
    <string name="create_new_account">Create new account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="welcome_back">Welcome back</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="login">Login</string>
    <string name="valid_email">Please enter a valid email</string>
    <string name="forgot_password">Forgot Password?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_email_address_to_reset_your_password">Enter your email address to reset your password</string>
    <string name="reset_password">Reset Password</string>
    <string name="vocabulary_title">The secret to be fluent in English</string>
    <string name="topic">English Vocabulary</string>
    <string name="topic_vocab">Family</string>
    <string name="back_home">back_home</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="mean">Xin chào</string>
    <string name="word">Hello</string>
    <string name="pronounce">həˈlō</string>
    <string name="speaker">speaker</string>
    <string name="detail_word">Xem chi tiết</string>
    <string name="note">Note</string>
    <string name="story_content">17 Camels and 3 Sons: Long ago, there lived an old man with his three sons in a deserted village, located in the vicinity of a desert. He had 17 camels, and they were the main source of his income. He used to rent out camels as a means of shipping in the desert. One day, he passed away. He had left a will, leaving his assets for his three sons. After the funeral and the other obligations were over, the three sons read the will. While their father had divided all the property he had into three equal parts, he had divided the 17 camels in a different way. They were not shared equally among the three as 17 is an odd number and a prime number, which cannot be divided. The old man had stated that the eldest son will own half of the 17 camels, the middle one will get one third of the 17 camels, and the youngest one will get his share of camels as one ninth! All of them were stunned to read the will and questioned each other how to divide the 17 camels as mentioned in the will. It is not possible to divide 17 camels and give half of the 17 camels to the eldest one. It is not possible also to divide the camels for the other two sons. They spent several days thinking of ways to divide the camels as mentioned in the will, but none could find the answer. They finally took the issue to the wise man in their village. The wise man heard the problem and instantly found a solution. He asked them to bring all the 17 camels to him. The sons brought the camels to the wise man\'s place. The wise man added a camel owned by him and made the total number of camels 18. Now, he asked the first son to read the will. As per the will, the eldest son got half the camels, which now counted to 18 / 2 = 9 camels! The eldest one got 9 camels as his share. The remaining camels were 9. The wise man asked the second son to read the will. He was assigned 1 / 3 of the total camels. It came to 18 / 3 = 6 camels. The second son got 6 camels as his share. Total number of camels shared by the elder sons - 9 + 6 = 15 camels. The third son read out his share of camels: 1 / 9th of the total number of camels - 18 / 9 = 2 camels. The youngest one got 2 camels as his share. Totally there were 9 + 6 + 2 camels shared by the brothers, which counted to 17 camels. Now, the one camel added by the wise man was taken back. The wise man solved this problem smartly with his intelligence. Intelligence is nothing but finding a common ground to solve an issue. In short, every problem has a solution.</string>

    <string name="score">Score: </string>
    <string name="scramble_word">hello</string>
    <string name="how_tp_play_scramble">Unscramble the word using all letters </string>
    <string name="conditions">You must reach 100 points to win</string>
    <string name="enter_word">Enter your word</string>
    <string name="submit">Submit</string>
    <string name="skip">Skip</string>
    <string name="answered">You scramble 10 words!</string>
    <string name="exit">Exit</string>
    <string name="try_again">Try again!</string>

    <string name="choose_type_quiz">Choose type quiz</string>
    <string name="or">OR</string>
    <string name="mul_type">Multichoice type</string>
    <string name="topic_quiz">Family</string>
    <string name="what_mean">Meaning of the ... is</string>
    <string name="timer">60</string>
    <string name="open_navigation">Open navigation drawer</string>
    <string name="close_navigation">Close navigation drawer</string>
    <string name="account">Account</string>
    <string name="signout">SignOut</string>
    <string name="learn_english">Learn English</string>
    <string name="search">search</string>
    <string name="description">Description</string>
    <string name="download">Download</string>
    <string name="cancel">Cancel</string>
    <string name="downloading">Downloading..</string>
    <string name="question_delete">Do you want to delete?</string>
    <string name="answer_no">No</string>
    <string name="answer_yes">Yes</string>
    <string name="translate">Translate</string>
    <string name="account_header">Account</string>
    <string name="loading">Loading...</string>
    <string name="status">Status</string>
    <string name="listening">Listening</string>
    <string name="game_over">Game Over</string>
    <string name="back_detail_activity">Back</string>
    <string name="iv_lose">crying</string>
    <string name="congrats">Congratulations</string>
    <string name="win_noti">Bạn đã thắng</string>
    <string name="coin_win">coin_win</string>
    <string name="winner">winner</string>
    <string name="chat_with_bot">Chat with bot</string>
    <string name="more_features">More features</string>
    <string name="add">Add</string>
    <string name="bookmark">Bookmark</string>
    <string name="update">Update</string>
    <string name="note_this_word_to_the_bookmark">Note this word to the bookmark</string>
    <string name="message_purchase_one">%s</string>

</resources>