<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/welcome_back"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/login_to_continue"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"/>
        <ImageView
            android:layout_marginTop="16dp"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:src="@drawable/log_in"
            android:id="@+id/ivLogin"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:hintEnabled="true"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:inputType="textEmailAddress"
                android:background="@drawable/background_input"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_13ssp"
                app:endIconMode="clear_text"
                app:boxStrokeColor="@color/white"
                app:boxStrokeErrorColor="@color/red"/>


        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:hintEnabled="true"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:inputType="textPassword"
                android:background="@drawable/background_input"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_13ssp"
                app:endIconMode="clear_text"
                app:boxStrokeColor="@color/white"
                app:boxStrokeErrorColor="@color/red"/>


        </com.google.android.material.textfield.TextInputLayout>
        <CheckBox
            android:id="@+id/cbRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Remember"
            android:textColor="@color/primary_text"
            android:textStyle="bold"
            android:layout_marginLeft="-120dp"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:animateLayoutChanges="true">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_4sdp"/>
            <ProgressBar
                android:id="@id/progressBar"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:visibility="invisible"/>
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvResetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="@string/forgot_password"
                android:layout_weight="1"
                android:textColor="@color/primary"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="@string/create_new_account"
                android:textColor="@color/primary"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>

</ScrollView>