<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_60">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_300sdp"
        android:layout_marginHorizontal="@dimen/_18sdp"
        app:cardCornerRadius="@dimen/_11ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_win"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/fat_font_1"
                android:text="@string/congrats"
                android:textColor="@color/yellow"
                android:textSize="@dimen/_30ssp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_win"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_below="@id/tv_win"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_5sdp"
                android:contentDescription="@string/winner"
                android:src="@drawable/icon_winner" />

            <TextView
                android:id="@+id/tv_coin_answered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_win"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="@string/win_noti"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/_30sdp"
                app:cardCornerRadius="@dimen/_11sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/ocean"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tv_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/fat_font_1"
                        android:text="@string/back_detail_activity"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_15ssp"
                        android:textStyle="bold" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>